--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="">
+
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A lion">
+    
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" title="A roaring lion" alt="A lion">
   </body>
 </html>
